--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,8 +2,8 @@
 
 <div class="d-flex flex-wrap">
   <common-card
-    [email]="user?.email"
-    [name]="user?.name"
-    [bio]="user?.bio"
+    [email]="user.email"
+    [name]="user.name"
+    [bio]="user.bio"
   ></common-card>
 </div>
